--- a/src/locales/nl.json
+++ b/src/locales/nl.json
@@ -28,7 +28,7 @@
     },
     "info": {
       "title": "Informatie - Darius Pizza",
-      "description": "Bezoek Darius Pizza voor authentieke pizza's. Vind onze locatie, openingstijden en contactgegevens."
+      "description": "Bezoek Darius Pizza voor authentieke Italiaanse pizza's in Cavalaire. Vind hier onze locatie, openingstijden en contactgegevens."
     },
     "privacy": {
       "title": "Privacybeleid - Darius Pizza",
@@ -40,7 +40,7 @@
     },
     "legalMentions": {
       "title": "Wettelijke Vermeldingen - Darius Pizza",
-      "description": "Juridische informatie over het restaurant Darius Pizza. Bedrijfsgegevens, verkoopsvoorwaarden en contactinformatie van onze authentieke Italiaanse pizzeria in Cavalaire."
+      "description": "Juridische informatie, bedrijfsgegevens en verkoopsvoorwaarden van onze authentieke Italiaanse pizzeria in Cavalaire."
     }
   },
   "footer": {
@@ -55,7 +55,6 @@
     "designedByName": "WebOustaou - Alexy Roman",
     "legal": {
       "privacy": "Privacy",
-      "terms": "Voorwaarden",
       "imprint": "Wettelijke Vermelding",
       "cookies": "Cookies"
     },
@@ -267,7 +266,7 @@
       "conclusion": "In 2020 begon een nieuw hoofdstuk. De passie voor gastronomie en uitzonderlijke producten transformeerde het slagersblok in een houtoven. Maison Darius werd Darius Pizza.\n\nHet decor is veranderd, maar de ziel is intact. We hebben het erfgoed van de slagerij behouden: de liefde voor verse producten, het respect voor ambachtelijk vakmanschap en een obsessie voor smaak. Dezelfde eisen die we aan ons vlees stelden, passen we nu toe op elk ingrediënt dat onze pizza's siert.",
       "image1": {
         "alt": "Voorgevel Darius Pizza sinds 2020",
-        "src": "/static/IMG_3109.JPG"
+        "src": "/static/pizza-storefront.webp"
       },
       "image2": {
         "alt": "Voorgevel Slagerij Darius voor 2020",
@@ -283,7 +282,7 @@
         "content": "Alles begint met een gecontroleerde hydratatie en langzaam kneden. We controleren de temperatuur van ons deeg op elk moment om het niet te \"stressen\". Deze fase, de 'pointage' (eerste rijs), ontwikkelt het initiële glutennetwerk dat het deeg zijn structuur geeft, terwijl de aroma's van ons meel behouden blijven.",
         "image": {
           "alt": "Deegbol na het kneden",
-          "src": "/static/IMG_9357.JPG"
+          "src": "/static/dough-ball-after-kneading.webp"
         }
       },
       "card2": {
@@ -292,7 +291,7 @@
         "content": "Hier gebeurt de magie. Onze deegbollen rusten minimaal 48 uur in een gekoelde omgeving met gecontroleerde temperatuur. Tijdens deze lange rijping breken de natuurlijke enzymen van de gist het glutennetwerk af. De complexe eiwitketens worden \"voorverteerd\".\n\nHet resultaat voor u? Een ongelooflijk licht, luchtig en licht verteerbaar deeg. Geen zwaar gevoel meer na de maaltijd.",
         "image": {
           "alt": "Deegbollen rijpen in de koeling",
-          "src": "/static/IMG_8641.jpg"
+          "src": "/static/dough-balls-cold-maturing.webp"
         }
       },
       "card3": {
@@ -314,7 +313,7 @@
         "content": "De basis van ons deeg is ons meel. We hebben gekozen voor Moulin Céard, een familiemolen in de Hautes-Alpes met knowhow die sinds 1820 wordt doorgegeven.\n\nZij selecteren regionale tarwe, vaak Label Rouge, om een karaktervol meel zonder additieven te produceren. Deze keuze geeft ons deeg zijn rustieke smaak en zijn unieke vermogen om te bloeien tijdens de 48 uur durende rijping. Het is onze toewijding aan terroir en traceerbaarheid.",
         "image": {
           "alt": "Meel Moulin Céard uit de Hautes-Alpes",
-          "src": "/static/ceard.jpeg"
+          "src": "/static/moulin-ceard-flour.webp"
         }
       },
       "card2": {
@@ -332,7 +331,7 @@
         "content": "Een pizza is een huwelijk tussen lokaal en authentiek. Voor de pijlers van de Italiaanse gastronomie kopen we rechtstreeks in bij de besten.\n\nOnze tomaten? San Marzano AOP, zongerijpt aan de voet van de Vesuvius. Onze Mozzarella? Smeltende fior di latte of een echte Bufala Campana AOP van buffelmelk. Extra vierge olijfolie, 24 maanden gerijpte Parmigiano Reggiano... Wij importeren de zon van Italië.",
         "image": {
           "alt": "Authentieke Italiaanse AOP-producten",
-          "src": "/static/ital.webp"
+          "src": "/static/italian-products.webp"
         }
       }
     },
@@ -459,8 +458,8 @@
         "content": "Dit privacybeleid is bedoeld om gebruikers van de site te informeren over hoe hun persoonlijke gegevens worden verzameld. Persoonlijke gegevens worden beschouwd als alle informatie waarmee een gebruiker kan worden geïdentificeerd. Dit kan zijn: hun voor- en achternaam, leeftijd, post- of e-mailadres, locatie of IP-adres (geen uitputtende lijst).",
         "rights": "Dit beleid informeert gebruikers ook over hun rechten met betrekking tot deze gegevens, over de persoon die verantwoordelijk is voor de verwerking van de verzamelde en verwerkte persoonlijke gegevens, over de ontvangers van deze persoonlijke gegevens, en over het cookiebeleid van de site.",
         "relatedDocuments": "Dit beleid vormt een aanvulling op de Wettelijke Vermeldingen en het Cookiebeleid die toegankelijk zijn voor gebruikers op de volgende adressen:",
-        "legalMentionsLink": "https://www.dariuspizza.fr/legal-mentions",
-        "cookiesPolicyLink": "https://www.dariuspizza.fr/cookies"
+        "legalMentionsLink": "Wettelijke Vermeldingen",
+        "cookiesPolicyLink": "Cookiebeleid"
       },
       "principles": {
         "title": "Artikel 2: BEGINSELEN MET BETREKKING TOT DE VERZAMELING EN VERWERKING VAN PERSOONSGEGEVENS",
@@ -691,77 +690,6 @@
       "cnilComplaint": {
         "title": "11. Klacht indienen bij de CNIL",
         "content": "Indien u, na contact met ons te hebben opgenomen, van mening bent dat uw rechten op uw gegevens niet worden gerespecteerd, kunt u een klacht indienen bij de bevoegde toezichthoudende autoriteit in Frankrijk, de Commission Nationale de l'Informatique et des Libertés (CNIL): www.cnil.fr."
-      }
-    },
-    "terms": {
-      "backToHome": "Terug naar Home",
-      "title": "Gebruiksvoorwaarden",
-      "lastUpdated": "Laatst bijgewerkt: 1 januari 2024",
-      "introduction": {
-        "title": "Introductie",
-        "content": "Welkom bij Darius Pizza. Deze Gebruiksvoorwaarden zijn van toepassing op uw gebruik van onze website en onze diensten. Door toegang te krijgen tot of gebruik te maken van onze diensten, gaat u ermee akkoord gebonden te zijn aan deze voorwaarden."
-      },
-      "acceptance": {
-        "title": "Aanvaarding van de voorwaarden",
-        "content": "Door onze website te gebruiken of een bestelling te plaatsen, erkent u dat u deze Gebruiksvoorwaarden en ons Privacybeleid hebt gelezen, begrepen en ermee akkoord gaat."
-      },
-      "orders": {
-        "title": "Bestellingen en diensten",
-        "content": "Bij het plaatsen van een bestelling gaat u akkoord met:",
-        "accuracy": "Het verstrekken van nauwkeurige en volledige informatie",
-        "pricing": "Het betalen van de prijzen zoals aangegeven op ons menu",
-        "availability": "Het accepteren dat menu-items mogelijk niet altijd beschikbaar zijn",
-        "modifications": "Het begrijpen dat wijzigingen in de bestelling de prijs en levertijd kunnen beïnvloeden"
-      },
-      "payment": {
-        "title": "Betalingsvoorwaarden",
-        "content": "Betalingsvoorwaarden omvatten:",
-        "methods": "We accepteren contant geld, creditcards en andere goedgekeurde betaalmethoden",
-        "timing": "Betaling is verschuldigd op het moment van het plaatsen van de bestelling",
-        "refunds": "Terugbetalingen zijn onderworpen aan ons terugbetalingsbeleid en de toepasselijke wetgeving"
-      },
-      "delivery": {
-        "title": "Levering en afhaling",
-        "content": "Voorwaarden voor levering en afhaling:",
-        "times": "Levertijden zijn schattingen en kunnen variëren",
-        "areas": "We leveren binnen ons aangewezen servicegebied",
-        "responsibility": "U bent verantwoordelijk voor het verstrekken van nauwkeurige leveringsinformatie"
-      },
-      "liability": {
-        "title": "Beperking van aansprakelijkheid",
-        "content": "Voor zover maximaal toegestaan door de wet, is Darius Pizza niet aansprakelijk voor enige indirecte, incidentele, speciale, gevolg- of punitieve schade.",
-        "limitation": "Onze totale aansprakelijkheid zal het bedrag dat u voor de diensten heeft betaald niet overschrijden."
-      },
-      "intellectualProperty": {
-        "title": "Intellectueel eigendom",
-        "content": "Alle inhoud op onze website, inclusief tekst, afbeeldingen, logo's en foto's, is eigendom van Darius Pizza en wordt beschermd door het auteursrecht en andere wetten op intellectueel eigendom."
-      },
-      "prohibited": {
-        "title": "Verboden gebruik",
-        "content": "U mag onze diensten niet gebruiken voor:",
-        "illegal": "Enig onwettig doel of om anderen aan te zetten tot het verrichten van onwettige handelingen",
-        "harassment": "Het lastigvallen, misbruiken of schaden van anderen",
-        "fraud": "Het verzenden of laten verzenden van enig reclame- of promotiemateriaal",
-        "violation": "Het schenden van enige toepasselijke wet- of regelgeving"
-      },
-      "termination": {
-        "title": "Beëindiging",
-        "content": "We kunnen uw toegang tot onze diensten onmiddellijk beëindigen of opschorten, zonder voorafgaande kennisgeving, om welke reden dan ook, inclusief schending van deze Gebruiksvoorwaarden."
-      },
-      "governingLaw": {
-        "title": "Toepasselijk recht",
-        "content": "Deze Gebruiksvoorwaarden worden beheerst door en geïnterpreteerd in overeenstemming met de wetten van het rechtsgebied waarin Darius Pizza actief is."
-      },
-      "contact": {
-        "title": "Contactgegevens",
-        "content": "Als u vragen heeft over deze Gebruiksvoorwaarden, neem dan contact met ons op:",
-        "email": "E-mail",
-        "phone": "Telefoon",
-        "address": "Adres"
-      },
-      "changes": {
-        "title": "Wijzigingen in de voorwaarden",
-        "content": "We behouden ons het recht voor om deze Gebruiksvoorwaarden op elk moment te wijzigen. We zullen gebruikers op de hoogte stellen van belangrijke wijzigingen door de nieuwe Gebruiksvoorwaarden op deze pagina te publiceren."
       }
     },
     "cookies": {
